Fixed: status is shown behind toolbar

--- a/libraries/buildingblocks/style/status.css
+++ b/libraries/buildingblocks/style/status.css
@@ -5,7 +5,7 @@ section[role="status"] {
   background: rgba(64,64,64,1) url(status/images/ui/pattern.png) repeat left top;
   overflow: hidden;
   position: absolute;
-  z-index: 100;
+  z-index: 101;
   left: 0;
   right: 0;
   bottom: 0;
